WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
286017
Fix IPInt br_on_null popping too many values from the stack
https://bugs.webkit.org/show_bug.cgi?id=286017
Summary
Fix IPInt br_on_null popping too many values from the stack
daniel_liu4
Reported
2025-01-15 12:47:11 PST
IPInt's br_on_null previously would pop an extra value from the stack if a branch was taken, since the null would be popped both in the opcode and during the branch.
rdar://142889611
Attachments
Add attachment
proposed patch, testcase, etc.
daniel_liu4
Comment 1
2025-01-15 13:18:49 PST
Pull request:
https://github.com/WebKit/WebKit/pull/39096
EWS
Comment 2
2025-01-15 16:13:03 PST
Committed
288975@main
(5619ce504b8f): <
https://commits.webkit.org/288975@main
> Reviewed commits have been landed. Closing PR #39096 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug