Fix IPInt br_on_null popping too many values from the stack https://bugs.webkit.org/show_bug.cgi?id=286017 rdar://142889611

Reviewed by Yijia Huang and Yusuke Suzuki.

IPInt's br_on_null previously would pop an extra value from the stack if a branch
was taken, since the null would be popped both in the opcode and during the branch.

* Source/JavaScriptCore/wasm/WasmIPIntGenerator.cpp:
(JSC::Wasm::IPIntGenerator::addBranchNull):

Canonical link: https://commits.webkit.org/288975@main